@@ -302,11 +302,23 @@ NodeType Node::type() const {
   return (_isArray || _value.size()) ? LEAF : NODE;
 }
 
+
+bool Node::lifetimeExpired() const {
+  using clock = std::chrono::system_clock; 
+  return _ttl != clock::time_point() && _ttl < clock::now();
+}
+
 /// @brief lh-value at path vector
 Node& Node::operator()(std::vector<std::string> const& pv) {
   Node* current = this;
 
   for (std::string const& key : pv) {
+
+    // Remove TTL for any nodes on the way down, if and only if the noted TTL
+    // is expired.
+    if (current->lifetimeExpired()) {
+      current->clear();
+    }
 
     auto& children = current->_children;
     auto  child = children.find(key);
@@ -345,9 +357,7 @@ Node const& Node::operator()(std::vector<std::string> const& pv) const {
     auto const& children = current->_children;
     auto const  child = children.find(key);
 
-    if (child == children.end() ||
-        (child->second->_ttl != std::chrono::system_clock::time_point() &&
-         child->second->_ttl < std::chrono::system_clock::now())) {
+    if (child == children.end() || child->second->lifetimeExpired()) {
       throw StoreException(std::string("Node ") + uri() + "/" + key + " not found!");
     }  else {
       current = child->second.get();
@@ -495,11 +505,17 @@ ResultT<std::shared_ptr<Node>> Node::handle<INCREMENT>(VPackSlice const& slice) 
   size_t inc = (slice.hasKey("step") && slice.get("step").isUInt())
                    ? slice.get("step").getUInt() : 1;
   Builder tmp;
+  bool applied = false;
   {
     VPackObjectBuilder t(&tmp);
     try {
-      tmp.add("tmp", Value(this->slice().getInt() + inc));
-    } catch (std::exception const&) {
+      if (!lifetimeExpired()) {
+        tmp.add("tmp", Value(this->slice().getInt() + inc));
+        applied = true;
+      }
+    } catch (...) {}
+
+    if (!applied) {
       tmp.add("tmp", Value(1));
     }
   }
@@ -511,11 +527,17 @@ ResultT<std::shared_ptr<Node>> Node::handle<INCREMENT>(VPackSlice const& slice) 
 template <>
 ResultT<std::shared_ptr<Node>> Node::handle<DECREMENT>(VPackSlice const& slice) {
   Builder tmp;
+  bool applied = false;
   {
     VPackObjectBuilder t(&tmp);
     try {
-      tmp.add("tmp", Value(this->slice().getInt() - 1));
-    } catch (std::exception const&) {
+      if (!lifetimeExpired()) {
+        tmp.add("tmp", Value(this->slice().getInt() - 1));
+        applied = true;
+      }
+    } catch (...) {}
+
+    if (!applied) {
       tmp.add("tmp", Value(-1));
     }
   }
@@ -534,7 +556,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<PUSH>(VPackSlice const& slice) {
   Builder tmp;
   {
     VPackArrayBuilder t(&tmp);
-    if (this->slice().isArray()) {
+    if (this->slice().isArray() && !lifetimeExpired()) {
       for (auto const& old : VPackArrayIterator(this->slice())) tmp.add(old);
     }
     tmp.add(slice.get("new"));
@@ -567,7 +589,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<ERASE>(VPackSlice const& slice) {
   {
     VPackArrayBuilder t(&tmp);
 
-    if (this->slice().isArray()) {
+    if (this->slice().isArray() && !lifetimeExpired()) {
       if (haveVal) {
         VPackSlice valToErase = slice.get("val");
         for (auto const& old : VPackArrayIterator(this->slice())) {
@@ -613,7 +635,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<REPLACE>(VPackSlice const& slice) {
   Builder tmp;
   {
     VPackArrayBuilder t(&tmp);
-    if (this->slice().isArray()) {
+    if (this->slice().isArray() && !lifetimeExpired()) {
       VPackSlice valToRepl = slice.get("val");
       for (auto const& old : VPackArrayIterator(this->slice())) {
         if (VelocyPackHelper::equal(old, valToRepl, /*useUTF8*/ true)) {
@@ -634,7 +656,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<POP>(VPackSlice const& slice) {
   Builder tmp;
   {
     VPackArrayBuilder t(&tmp);
-    if (this->slice().isArray()) {
+    if (this->slice().isArray() && !lifetimeExpired()) {
       VPackArrayIterator it(this->slice());
       if (it.size() > 1) {
         size_t j = it.size() - 1;
@@ -661,7 +683,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<PREPEND>(VPackSlice const& slice) {
   {
     VPackArrayBuilder t(&tmp);
     tmp.add(slice.get("new"));
-    if (this->slice().isArray()) {
+    if (this->slice().isArray() && !lifetimeExpired()) {
       for (auto const& old : VPackArrayIterator(this->slice())) tmp.add(old);
     }
   }
@@ -675,7 +697,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<SHIFT>(VPackSlice const& slice) {
   Builder tmp;
   {
     VPackArrayBuilder t(&tmp);
-    if (this->slice().isArray()) {  // If a
+    if (this->slice().isArray() && !lifetimeExpired()) {  // If a
       VPackArrayIterator it(this->slice());
       bool first = true;
       for (auto const& old : it) {
@@ -690,6 +712,7 @@ ResultT<std::shared_ptr<Node>> Node::handle<SHIFT>(VPackSlice const& slice) {
   *this = tmp.slice();
   return ResultT<std::shared_ptr<Node>>::success(nullptr);
 }
+
 
 }  // namespace consensus
 }  // namespace arangodb
