@@ -830,6 +830,16 @@ function agencyTestSuite () {
       writeAndCheck([[{"/a/euler":{"op":"push","new":2.71828182845904523536}}]]);
       assertEqual(readAndCheck([["/a/euler"]]),
                   [{a:{euler:[2.71828182845904523536]}}]);
+      
+      writeAndCheck([[{"/version":{"op":"set", "new": {"c": ["hello"]}, "ttl":1}}]]);
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello"]}}]);
+      writeAndCheck([[{"/version/c":{"op":"push", "new":"world"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello","world"]}}]);
+      wait(2.1);
+      assertEqual(readAndCheck([["version"]]), [{}]);
+      writeAndCheck([[{"/version/c":{"op":"push", "new":"hello"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello"]}}]);
+
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -864,6 +874,16 @@ function agencyTestSuite () {
       writeAndCheck([[{"/a/euler":{"op":"prepend","new":1.25}}]]);
       assertEqual(readAndCheck([["/a/euler"]]),
                   [{a:{euler:[1.25,2.71828182845904523536]}}]);
+
+      writeAndCheck([[{"/version":{"op":"set", "new": {"c": ["hello"]}, "ttl":1}}]]);
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello"]}}]);
+      writeAndCheck([[{"/version/c":{"op":"prepend", "new":"world"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["world","hello"]}}]);
+      wait(2.1);
+      assertEqual(readAndCheck([["version"]]), [{}]);
+      writeAndCheck([[{"/version/c":{"op":"prepend", "new":"hello"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello"]}}]);
+      
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -879,6 +899,15 @@ function agencyTestSuite () {
       assertEqual(readAndCheck([["/a/b/c"]]), [{a:{b:{c:[1,2,3,"max"]}}}]);
       writeAndCheck([[{"/a/b/d":{"op":"shift"}}]]); // on existing scalar
       assertEqual(readAndCheck([["/a/b/d"]]), [{a:{b:{d:[]}}}]);
+
+      writeAndCheck([[{"/version":{"op":"set", "new": {"c": ["hello","world"]}, "ttl":1}}]]);
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello","world"]}}]);
+      writeAndCheck([[{"/version/c":{"op":"shift"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["world"]}}]);
+      wait(2.1);
+      assertEqual(readAndCheck([["version"]]), [{}]);
+      writeAndCheck([[{"/version/c":{"op":"shift"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:[]}}]);
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -895,6 +924,15 @@ function agencyTestSuite () {
       writeAndCheck([[{"a/b/d":1}]]); // on existing scalar
       writeAndCheck([[{"/a/b/d":{"op":"pop"}}]]); // on existing scalar
       assertEqual(readAndCheck([["/a/b/d"]]), [{a:{b:{d:[]}}}]);
+
+      writeAndCheck([[{"/version":{"op":"set", "new": {"c": ["hello","world"]}, "ttl":1}}]]);
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello","world"]}}]);
+      writeAndCheck([[{"/version/c":{"op":"pop"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:["hello"]}}]);
+      wait(2.1);
+      assertEqual(readAndCheck([["version"]]), [{}]);
+      writeAndCheck([[{"/version/c":{"op":"pop"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:[]}}]);
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -997,6 +1035,14 @@ function agencyTestSuite () {
       assertEqual(readAndCheck([["version"]]), [{version:1}]);
       writeAndCheck([[{"/version":{"op":"increment"}}]]); // int before
       assertEqual(readAndCheck([["version"]]), [{version:2}]);
+      writeAndCheck([[{"/version":{"op":"set", "new": {"c":12}, "ttl":1}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:12}}]);
+      writeAndCheck([[{"/version/c":{"op":"increment"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:13}}]);
+      wait(1.1);
+      assertEqual(readAndCheck([["version"]]), [{}]);
+      writeAndCheck([[{"/version/c":{"op":"increment"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:1}}]);
     },
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -1009,6 +1055,14 @@ function agencyTestSuite () {
       assertEqual(readAndCheck([["version"]]), [{version:-1}]);
       writeAndCheck([[{"/version":{"op":"decrement"}}]]); // int before
       assertEqual(readAndCheck([["version"]]), [{version:-2}]);
+      writeAndCheck([[{"/version":{"op":"set", "new": {"c":12}, "ttl":1}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:12}}]);
+      writeAndCheck([[{"/version/c":{"op":"decrement"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:11}}]);
+      wait(1.1);
+      assertEqual(readAndCheck([["version"]]), [{}]);
+      writeAndCheck([[{"/version/c":{"op":"decrement"}}]]); // int before
+      assertEqual(readAndCheck([["version"]]), [{version:{c:-1}}]);
     },
 
 ////////////////////////////////////////////////////////////////////////////////
